# python-programming-tasks

./: LICENSE  README.md  Task_PY200_T1_Mean_Median_Mode.py  Task_PY200_T3_Electric_Bill_Slab.py  pyproject.toml
PY100/: 01_Basics.ipynb  02_Print Function.ipynb  03_String functions.ipynb  04_Int and Float.ipynb  05_Date Functions.ipynb  06_List Tuple Dict.ipynb  07_Conditional Logic.ipynb  08_Loops.ipynb  09_Environment and Tools Setup.ipynb
PY200/: 01_Greatest_Least_Number.ipynb  02_GST_Calculation.ipynb  03_Mean.ipynb  04_Mode.ipynb  05_Median.ipynb  Task_PY200_T5_Chessboard.py
PY200/.ipynb_checkpoints/: 01_Greatest_Least_Number-checkpoint.ipynb
PY200/Task_Chessboard_Pattern/: README.md
PY200/Task_Digit_Constraints/: README.md  Task_PY200_T6_Digit_Constraints.py
PY200/Task_Password_Strength_Checker/: README.md  Task_PY200_T4_Password_Strength.py
PY300/: 01_Summary_Stats.ipynb  02_Box_Plot_Outliers.ipynb  03_Visualizations.ipynb  04_Plotly_Interactive.ipynb  05_Outlier_Treatment_Missing_Normalization.ipynb
PY400/: 01_DataFrames.ipynb  02_File_Operations.ipynb  03_Web_Crawling.ipynb
PY500/: 01_Variations_Distributions.ipynb  02_Sampling_Estimation.ipynb  03_Hypothesis_Testing.ipynb  04_AB_Testing_ANOVA.ipynb
Task_PY200_T2_Number_Check.py/: README.md
Task_PY200_T3_Electric_Bill_Slab/: README.md
Tasks/: Task_PY200_T2_Number_Check.py  Task_PY200_T3_Electric_Bill_Slab.py  Task_PY200_T4_Password_Strength.py  Task_PY200_T5_Chessboard.py  Task_PY200_T6_Digit_Constraints.py
